# axicor

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  Cargo.toml  Credits.md  DEVLOG.md  HISTORY.md  LICENSE  LICENSE-MIT  README.md  axicor_pr_body.md  copilot.local.toml  design_specs.md  test_hash_speed.py
axicor-baker/: Cargo.toml  README.md
axicor-baker/src/: biology.rs  lib.rs  main.rs
axicor-baker/src/bake/: atlas_map.rs  axic.rs  axon_growth.rs  cone_tracing.rs  dendrite_connect.rs  ghost_map.rs  input_map.rs  layout.rs  mod.rs  neuron_placement.rs  output_map.rs  seed.rs  spatial_grid.rs  sprouting.rs  test_axon_growth.rs  test_sprouting.rs  topology.rs
axicor-baker/src/parser/: anatomy.rs  blueprints.rs  io.rs  mod.rs  simulation.rs
axicor-baker/src/validator/: checks.rs  mod.rs  test_checks.rs
axicor-client/: README.md  benchmark_encoders.py  pyproject.toml  test_builder_io.py  test_checkpointing.py  test_client_timeout.py  test_distillation.py  test_e2e_smoke.py  test_io_matrix.py  test_live_1k_ticks.py  test_population_decoder.py  test_surgeon.py  test_zero_gc.py
axicor-client/axicor/: __init__.py  brain.py  builder.py  client.py  contract.py  control.py  decoders.py  encoders.py  memory.py  surgeon.py  telemetry.py  tuner.py  utils.py
axicor-client/axicor/retina/: encoder.py
axicor-client/genesis/: brain.py  builder.py  client.py  contract.py  control.py  decoders.py  encoders.py  memory.py  platform.py  surgeon.py  telemetry.py  tuner.py  utils.py
axicor-compute/: Cargo.toml  README.md  build.rs
axicor-compute/src/: bindings.rs  ffi.rs  lib.rs  memory.rs  mock_ffi.rs
axicor-compute/src/amd/: bindings.hip  physics.hip
axicor-compute/src/compute/: shard.rs
axicor-compute/src/cpu/: physics.rs
axicor-compute/src/cuda/: bindings.cu  physics.cu
axicor-core/: Cargo.toml  LICENSE-APACHE  README.md
axicor-core/src/: constants.rs  coords.rs  hash.rs  ipc.rs  layout.rs  lib.rs  physics.rs  seed.rs  signal.rs  test_gsop_math.rs  test_physics.rs  test_seed.rs  test_signal.rs  test_tick.rs  test_time.rs  test_train_model.rs  time.rs  types.rs  vfs.rs
axicor-core/src/config/: anatomy.rs  blueprints.rs  brain.rs  instance.rs  io.rs  manifest.rs  mod.rs  sys.rs  test_blueprints.rs  test_config.rs  test_instance.rs  test_io.rs
axicor-lab/: Cargo.toml
axicor-lab/assets/shaders/: cad_glass.wgsl  instancing.wgsl  ui_corner_mask.wgsl
axicor-lab/crates/layout-api/: Cargo.toml
axicor-lab/plugins/: mod.rs
axicor-lab/plugins/ai_copilot/: Cargo.toml
axicor-lab/plugins/anatomy_slicer/: Cargo.toml
axicor-lab/plugins/blueprint_editor/: Cargo.toml
axicor-lab/plugins/code_editor/: Cargo.toml
axicor-lab/plugins/connectome_viewer/: Cargo.toml
axicor-lab/plugins/io_inspector/: Cargo.toml
axicor-lab/plugins/matrix_editor/: Cargo.toml
axicor-lab/plugins/node_editor/: Cargo.toml
axicor-lab/plugins/project_explorer/: Cargo.toml
axicor-lab/plugins/shard_cad/: Cargo.toml
axicor-lab/src/: lib.rs  main.rs  theme.rs  viewport.rs
axicor-lab/src/layout/: behavior.rs  data.rs  domain.rs  input.rs  interaction.rs  mod.rs  overlay.rs  plugin.rs  systems.rs  tree.rs
axicor-lab/src/panels/: mod.rs  neuron_physics.rs
axicor-lab/src/viewport/: mask.rs  mod.rs
axicor-lab/src/widgets/: button.rs  mod.rs  slider.rs
axicor-node/: Cargo.toml  README.md
axicor-node/src/: boot.rs  boot.rs_fix.rs  config.rs  input.rs  ipc.rs  main.rs  output.rs  sentinel.rs  zone_runtime.rs
axicor-node/src/network/: bsp.rs  channel.rs  egress.rs  geometry_client.rs  ghosts.rs  inter_node.rs  intra_gpu.rs  io_server.rs  mod.rs  replication.rs  ring_buffer.rs  router.rs  slow_path.rs  socket.rs  telemetry.rs  test_intra_gpu.rs
axicor-node/src/node/: mod.rs  recovery.rs  shard_thread.rs
axicor-node/src/orchestrator/: spatial_grid.rs
axicor-node/src/tui/: input.rs  layout.rs  state.rs
genesis-baker/: Cargo.toml
genesis-baker/src/: main.rs
genesis-baker/src/bake/: axon_growth.rs  cone_tracing.rs  dendrite_connect.rs  input_map.rs  layout.rs  mod.rs  neuron_placement.rs  output_map.rs  seed.rs  spatial_grid.rs  sprouting.rs  test_axon_growth.rs  test_cone_tracing.rs  test_dendrite_connect.rs  test_spatial_grid.rs  topology.rs
genesis-baker/src/parser/: anatomy.rs  blueprints.rs  io.rs  simulation.rs
genesis-baker/src/validator/: checks.rs  test_checks.rs
genesis-baker/test_data/: anatomy.toml  anatomy_small.toml  blueprints.toml  simulation.toml  simulation_fast.toml  simulation_small.toml
genesis-compute/: Cargo.toml  build.rs
genesis-compute/src/: bindings.rs  ffi.rs  lib.rs  memory.rs  mock_ffi.rs
genesis-compute/src/amd/: bindings.hip  physics.hip
genesis-compute/src/compute/: shard.rs
genesis-compute/src/cpu/: physics.rs
genesis-compute/src/cuda/: bindings.cu  physics.cu
genesis-core/: Cargo.toml
genesis-core/src/: constants.rs  coords.rs  hash.rs  ipc.rs  layout.rs  lib.rs  physics.rs  signal.rs  test_gsop_math.rs  test_signal.rs  test_train_model.rs  types.rs  vfs.rs
genesis-core/src/config/: anatomy.rs  blueprints.rs  brain.rs  instance.rs  io.rs  manifest.rs  mod.rs  test_anatomy.rs  test_blueprints.rs  test_config.rs  test_instance.rs  test_io.rs
genesis-ide/: Cargo.toml
genesis-ide/assets/shaders/: neuron_instanced.wgsl
genesis-ide/src/: camera.rs  hud.rs  loader.rs  main.rs  neuron_inspector.rs  signal_scope.rs  telemetry.rs  timeline.rs  world.rs
genesis-node/: Cargo.toml
genesis-node/src/: boot.rs  boot.rs_fix.rs  input.rs  ipc.rs  main.rs  output.rs  sentinel.rs  simple_reporter.rs  zone_runtime.rs
genesis-node/src/network/: bsp.rs  egress.rs  geometry_client.rs  ghosts.rs  inter_node.rs  intra_gpu.rs  io_server.rs  (+6 more)
genesis-runtime/: Cargo.toml
genesis-runtime/cuda/: apply_spike_batch.cu  bindings.cu  inject_inputs.cu  physics.cu
genesis-runtime/examples/: shard_00.toml  shard_01.toml
genesis-runtime/src/: config.rs  ffi.rs  input.rs  lib.rs  main.rs  memory.rs  mock_ffi.rs  sentinel.rs  zone_runtime.rs
genesis-runtime/tests/: cuda_kernels.rs  e2e_test.rs  ipc_e2e_test.sh  network_slow_path.rs
(+6693 files in other folders)
