[workspace]
members = [
    "genesis-core",
    "genesis-baker",
    "genesis-compute",
    "genesis-node",
    "genesis-retina",
    "axicor-lab",
    "axicor-lab/crates/layout-api",
    "axicor-lab/plugins/project_explorer",
    "axicor-lab/plugins/connectome_viewer",
    "axicor-lab/plugins/node_editor",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Oleksandr Arzamazov <olexandrarzamazov@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/H4V1K-dev/Axicor"

[workspace.dependencies]
# genesis-core is a local dep for the others
genesis-core = { path = "genesis-core" }
wyhash = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
