[workspace]
members = [
    "axicor-core",
    "axicor-baker",
    "axicor-compute",
    "axicor-node",
    "axicor-lab",
    "axicor-lab/crates/layout-api",
    "axicor-lab/plugins/project_explorer",
    "axicor-lab/plugins/connectome_viewer",
    "axicor-lab/plugins/node_editor",
    "axicor-lab/plugins/code_editor",
    "axicor-lab/plugins/ai_copilot",
    "axicor-lab/plugins/io_inspector",
    "axicor-lab/plugins/blueprint_editor",
    "axicor-lab/plugins/anatomy_slicer",
    "axicor-lab/plugins/matrix_editor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Oleksandr Arzamazov <alex@axicor.dev>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/H4V1K-dev/Axicor"
description = "Axicor: High-Performance Spiking Neural Network Engine"
homepage = "https://axicor.dev"
documentation = "https://docs.rs/axicor-core"
readme = "README.md"
keywords = ["neural-network", "spiking", "gpu", "embodied-ai"]
categories = ["science", "simulation"]

[workspace.dependencies]
# axicor-core is a local dep for the others
axicor-core = { version = "0.1.0", path = "axicor-core" }
wyhash = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
