[workspace]
members = [
    "axicor-core",
    "axicor-baker",
    "axicor-compute",
    "axicor-node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Oleksandr Arzamazov <alex@axicor.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/H4V1K-dev/Axicor"
description = "Axicor: Neuromorphic Computing Engine — biology-inspired SNN AI architecture"
homepage = "https://axicor.dev"
documentation = "https://docs.rs/axicor-core"
readme = "README.md"
keywords = ["snn", "neuromorphic", "spiking", "gpu", "embodied-ai"]
categories = ["science::neuroscience", "simulation"]

[workspace.dependencies]
# axicor-core is a local dep for the others
axicor-core = { version = "0.1.0", path = "axicor-core" }
wyhash = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
