[package]
name = "axicor-baker"
description = "TOML config compiler  binary .state/.axons blobs for Axicor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
exclude = [
    "tests/fixtures/*",
    "benches/*",
    "*.state",
    "*.axons",
    "*.axic",
    "*.gxi",
    "*.gxo",
    "Axicor-Models/",
    "*-Models/",
    ".Sandbox/",
    "*.log",
    "checkpoints/",
    "*.ckpt"
]

[[bin]]
name = "axicor-baker"
path = "src/main.rs"

[[bin]]
name = "axicor-baker-daemon"
path = "src/bin/daemon.rs"

[dependencies]
axicor-core = { version = "0.1.0", path = "../axicor-core" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wyhash = "0.5"
glam = "0.24"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
bytemuck = "1.14"
memmap2 = "0.9"
axicor-compute = { version = "0.1.0", path = "../axicor-compute" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
mock-gpu = ["axicor-compute/mock-gpu"]
amd = ["axicor-core/amd", "axicor-compute/amd"]
