[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axicor-client"
version = "0.1.0"
description = "Axicor Neuromorphic Engine Python Client (Zero-Copy Data Plane)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "toml",
    "opencv-python",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["axicor*"]
