[package]
name = "axicor-compute"
description = "Hardcore GPU compute, CUDA FFI and memory allocation for Axicor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
exclude = [
    "tests/fixtures/*",
    "benches/*",
    "*.state",
    "*.axons",
    "*.axic",
    "*.gxi",
    "*.gxo",
    "Axicor-Models/",
    "*-Models/",
    ".Sandbox/",
    "*.log",
    "checkpoints/",
    "*.ckpt"
]

[dependencies]
axicor-core = { workspace = true }
anyhow = "1"
bytemuck = { version = "1.25.0", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.8"

[build-dependencies]
cc = "1.0"
which = "6.0"

[features]
mock-gpu = []
amd = []

[dev-dependencies]
tempfile = "3"
