[package]
name = "axicor-compute"
description = "Axicor SNN engine — dual-backend (CUDA / AMD HIP) GPU compute kernels with CPU fallback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
categories = ["science::neuroscience", "hardware-support", "external-ffi-bindings", "concurrency", "science::robotics"]
keywords = ["cuda", "rocm", "gpu", "snn", "neuromorphic"]
exclude = [
    "tests/fixtures/*",
    "benches/*",
    "*.state",
    "*.axons",
    "*.axic",
    "*.gxi",
    "*.gxo",
    "Axicor-Models/",
    "*-Models/",
    ".Sandbox/",
    "*.log",
    "checkpoints/",
    "*.ckpt"
]

[dependencies]
axicor-core = { workspace = true }
anyhow = "1"
bytemuck = { version = "1.25.0", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.8"

[build-dependencies]
cc = "1.0"
which = "6.0"

[features]
mock-gpu = []
amd = []

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = false
features = ["mock-gpu"]

