[package]
name = "axicor-core"
description = "Shared types, constants and SoA layout for Axicor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
memmap2 = "0.9.10"
serde = { workspace = true }
toml = { workspace = true }
uuid = { version = "1.12", features = ["v4"] }

[features]
amd = []
