[package]
name = "axicor-core"
description = "Axicor SNN engine — C-ABI memory contracts, SoA layouts, and IPC primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
categories = ["science::neuroscience", "memory-management", "data-structures", "embedded", "no-std"]
keywords = ["snn", "neuromorphic", "soa", "bytemuck", "repr-c"]
exclude = [
    "tests/fixtures/*",
    "benches/*",
    "*.state",
    "*.axons",
    "*.axic",
    "*.gxi",
    "*.gxo",
    "Axicor-Models/",
    "*-Models/",
    ".Sandbox/",
    "*.log",
    "checkpoints/",
    "*.ckpt"
]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
memmap2 = "0.9.10"
serde = { workspace = true }
toml = { workspace = true }
uuid = { version = "1.12", features = ["v4"] }

[features]
amd = []

[package.metadata.docs.rs]
all-features = false
features = []

