[package]
name = "axicor-node"
default-run = "axicor-node"
description = "Axicor SNN engine — BSP-lockstep orchestrator, UDP fast-path server, Night Phase daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
categories = ["science::neuroscience", "science::robotics", "network-programming", "simulation", "concurrency"]
keywords = ["snn", "neuromorphic", "bsp", "realtime", "robotics"]
exclude = [
    "tests/fixtures/*",
    "benches/*",
    "*.state",
    "*.axons",
    "*.axic",
    "*.gxi",
    "*.gxo",
    "Axicor-Models/",
    "*-Models/",
    ".Sandbox/",
    "*.log",
    "checkpoints/",
    "*.ckpt"
]

[dependencies]
axicor-core = { workspace = true }
axicor-compute = { version = "0.1.0", path = "../axicor-compute" }
anyhow = "1"
tokio = { version = "1.49.0", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.60", features = ["derive"] }
toml = "1.0.3"
axum = { version = "0.7.5", features = ["ws"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
crossbeam = "0.8"
chrono = "0.4.38"
bytemuck = { version = "1.25.0", features = ["derive"] }
memmap2 = "0.9.10"
libc = "0.2.182"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.10"

[features]
mock-gpu = ["axicor-compute/mock-gpu"]
amd = ["axicor-core/amd", "axicor-compute/amd"]

[package.metadata.docs.rs]
all-features = false
features = ["mock-gpu"]

