[package]
name = "genesis-baker"
description = "TOML config compiler → binary .state/.axons blobs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "baker"
path = "src/main.rs"

[[bin]]
name = "genesis-baker-daemon"
path = "src/bin/daemon.rs"

[dependencies]
genesis-core = { path = "../genesis-core" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wyhash = "0.5"
glam = "0.24"
libc = "0.2"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
bytemuck = "1.14"
memmap2 = "0.9"
genesis-compute = { path = "../genesis-compute" }
