[package]
name = "genesis-compute"
description = "Hardcore GPU compute, CUDA FFI and memory allocation for Axicor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genesis-core = { workspace = true }
anyhow = "1"
bytemuck = { version = "1.25.0", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.8"

[build-dependencies]
cc = "1.0"

[features]
mock-gpu = []
amd = []

[dev-dependencies]
tempfile = "3"
