[package]
name = "genesis-core"
description = "Shared types, constants and SoA layout for Axicor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { workspace = true }
toml = { workspace = true }

[features]
amd = []
