[package]
name = "genesis-ide"
description = "Genesis Brain IDE — Bevy-based live 3D visualizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "genesis-ide"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
