[package]
name = "genesis-node"
default-run = "genesis-node"
description = "Distributed runtime node, networking, and orchestrator for Axicor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genesis-core = { workspace = true }
genesis-compute = { path = "../genesis-compute" }
anyhow = "1"
tokio = { version = "1.49.0", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.60", features = ["derive"] }
toml = "1.0.3"
axum = { version = "0.7.5", features = ["ws"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
crossbeam = "0.8"
chrono = "0.4.38"
bytemuck = { version = "1.25.0", features = ["derive"] }
memmap2 = "0.9.10"
libc = "0.2.182"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.10"

[features]
amd = ["genesis-core/amd", "genesis-compute/amd"]
