[package]
name = "genesis-runtime"
description = "Day/Night cycle orchestrator and CUDA kernel runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genesis-core = { workspace = true }
genesis-baker = { path = "../genesis-baker" }
anyhow = "1"
tokio = { version = "1.49.0", features = ["full"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
cc = "1.0"
