[package]
name = "genesis-runtime"
description = "Day/Night cycle orchestrator and CUDA kernel runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genesis-core = { workspace = true }
libc = "0.2"
anyhow = "1"
tokio = { version = "1.49.0", features = ["full"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
clap = { version = "4.5.60", features = ["derive"] }
toml = "1.0.3"
axum = { version = "0.7.5", features = ["ws"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
ratatui = "0.26"
crossterm = "0.27"
crossbeam = "0.8"

[build-dependencies]
cc = "1.0"

[features]
mock-gpu = []
