[package]
name = "layout-api"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["default"] }
bevy_egui = "0.27"
egui_tiles = "0.8.0"
genesis-core = { version = "0.0.0", path = "../../../genesis-core" }
memmap2 = "0.9.10"
serde = { version = "1.0", features = ["derive"] }
