[package]
name = "ai-copilot"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["default"] }
bevy_egui = "0.27"
layout-api = { path = "../../crates/layout-api" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
