[package]
name = "axicor-anatomy-slicer"
version.workspace = true
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_egui = "0.27"
layout-api = { path = "../../crates/layout-api" }
node-editor = { path = "../node_editor" }
connectome-viewer = { path = "../connectome_viewer" }
axicor-core = { workspace = true }
toml_edit = "0.22"
