[package]
name = "connectome-viewer"
version.workspace = true
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_egui = "0.27"
bytemuck = { version = "1.15", features = ["derive"] }
layout-api = { path = "../../crates/layout-api" }
axicor-core = { workspace = true }
toml = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
