[package]
name = "project-explorer"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["default"] }
genesis-core = { version = "0.0.0", path = "../../../genesis-core" }
bevy_egui = "0.27"
toml = { workspace = true }
layout-api = { path = "../../crates/layout-api" }
node-editor = { path = "../node_editor" }
connectome-viewer = { path = "../connectome_viewer" }
