[package]
name = "project-explorer"
version.workspace = true
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["default"] }
axicor-core = { workspace = true, path = "../../../axicor-core" }
bevy_egui = "0.27"
toml = { workspace = true }
layout-api = { path = "../../crates/layout-api" }
node-editor = { path = "../node_editor" }
connectome-viewer = { path = "../connectome_viewer" }
